# Worlds-Best-Text-Editor-2

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  LICENSE  README.md  README1.md  README2.md  README_WorldsBestTextEditor.md  TODO.txt  Version.h  cursortype.hpp  main1.cpp  main2.cpp  notes.txt  version.hpp.in
ColorLib/src/: CMakeLists.txt  ColorLib.cpp  ColorLib.h
Config/src/: CMakeLists.txt  Config.hpp  config.json
ExceptionLib/: ExceptionTypes.cpp  ExceptionTypes.h
FontConfigHelper/: CMakeLists.txt  FontConfigHelper.cpp  FontConfigHelper.h
FontLib/: CMakeLists.txt  FontManager.cpp  FontManager.h  FontTexture.cpp  FontTexture.h  WriteFunctions.cpp  WriteFunctions.h
GUILib/: CMakeLists.txt  GUIObject.cpp  GUIObject.h  Label.cpp  Label.h  Statusbar.cpp  Statusbar.h  Textbox.cpp  Textbox.h  Textbox_Cursor.cpp  Textbox_Draw.cpp  Textbox_Scroll.cpp
GUILib/AnyGUILib/: AnyGUIObject.cpp  AnyGUIObject.h
GUILib/include/: TextEntry.h  Textbox.h
GUILib/test/: CMakeLists.txt  guiMainTest.cpp
ResourceLib/: CMakeLists.txt  SDLHelper.cpp  SDLHelper.h  SDLManager.h  SDLResourceManager.cpp  SDLResourceManager.h  ServiceLocator.cpp
TextArea/: CMakeLists.txt  CursorType.h  DrawableTextArea.cpp  DrawableTextArea.h  TextArea.h  TextBuffer.cpp
TextArea/backup/: TextArea.cpp  TextArea.h
include/: Actions.hpp  Application.hpp  Buffer.hpp  Cursor.hpp  FontTextureManager.hpp  FunctionCallback.hpp  Functions.hpp  KeyMap.hpp  Keyboard.hpp  SDLK_KeyMap.hpp  Window.hpp
src/: Actions.cpp  Buffer.cpp  FunctionCallback.cpp  Functions.cpp  main.cpp
worlds-best-text-editor-3/: CMakeLists.txt  CMakePresets.json  README-2025.md  TODO.txt  cmake-debug-build-ninja.sh  cmake-debug-build.bat  cmake-debug-build.sh  cmake-debug-test.sh  cmake-release-build.sh  config.json  example_textfile.txt  main.cpp  vcpkg.json
worlds-best-text-editor-3/application_configuration/src/: CMakeLists.txt  application_configuration.cpp  application_configuration.hpp
worlds-best-text-editor-3/application_resources/src/: CMakeLists.txt  application_resources.cpp  application_resources.hpp
worlds-best-text-editor-3/color_util/src/: CMakeLists.txt  color_util.cpp  color_util.hpp
worlds-best-text-editor-3/document/src/: CMakeLists.txt  document.cpp  document.hpp
worlds-best-text-editor-3/event_system/src/: CMakeLists.txt  command.cpp  command.hpp  event_system.cpp  event_system.hpp  keybinding_configuration.cpp  keybinding_configuration.hpp
worlds-best-text-editor-3/performance_util/src/: CMakeLists.txt  performance_util.cpp  performance_util.hpp
worlds-best-text-editor-3/spdlog_util/: CMakeLists.txt  spdlog_util.hpp
worlds-best-text-editor-3/text_area/src/: CMakeLists.txt  text_area.cpp  text_area.hpp
worlds-best-text-editor-3/text_layout_engine/: NOTE.txt
worlds-best-text-editor-3/text_layout_engine/src/: CMakeLists.txt  text_layout_engine.cpp  text_layout_engine.hpp
worlds-best-text-editor-3/text_layout_engine_measure_string/src/: CMakeLists.txt  create_document_layout_2.cpp  create_document_layout_2.hpp  document_layout.hpp  document_layout_cursor.hpp  document_layout_line.hpp  private_functions.cpp  private_functions.hpp  text_layout_engine_measure_string.cpp  text_layout_engine_measure_string.hpp  wrap_line.cpp  wrap_line.hpp
worlds-best-text-editor-3/window_geometry/src/: CMakeLists.txt  window_geometry.cpp  window_geometry.hpp
worlds-best-text-editor-move-to-3/ColorLib/src/: CMakeLists.txt  ColorLib.h
worlds-best-text-editor-move-to-3/ExceptionLib/: CMakeLists.txt
worlds-best-text-editor-move-to-3/FontLib/: FontLoadProperties.h
worlds-best-text-editor-move-to-3/GUILib/: GUIObject.cpp  Textbox_Draw.cpp
worlds-best-text-editor-move-to-3/GUILib/include/: GUIObject.h  Label.h
worlds-best-text-editor-move-to-3/ResourceLib/: CMakeLists.txt  SDLManager.cpp  ServiceLocator.h
worlds-best-text-editor-move-to-3/TextArea/: TextArea.cpp  TextBuffer.h
worlds-best-text-editor-move-to-3/include/: FunctionCallback.hpp  KeyMap.hpp  Window.hpp
worlds-best-text-editor-move-to-3/src/: Actions.cpp  FunctionCallback.cpp  Functions.cpp
worlds-best-text-editor-original-code/: CMakeLists2.txt  Version.h.in  bugs.txt  build.sh  cmake-instructions.txt  main.cpp  main1.cpp  version.hpp
worlds-best-text-editor-original-code/ColorLib/src/: ColorLib.cpp
worlds-best-text-editor-original-code/Config/src/: Config.cpp
worlds-best-text-editor-original-code/GUILib/: GUIBox.cpp  GUIObjectController.h  Textbox_Cursor.cpp
worlds-best-text-editor-original-code/GUILib/include/: GUIBox.h  Statusbar.h
worlds-best-text-editor-original-code/include/: Buffer.hpp
worlds-best-text-editor-original-code/src/: Buffer.cpp
